Tried fixing Navbar

--- a/temp.rmd
+++ b/temp.rmd
@@ -37,3 +37,40 @@
                                     <Route path="/publish" element={ <PublishPost /> }>Make a Post</Route>
                                 </li>
                             </ul>
+
+
+
+
+
+
+
+
+
+
+                                    <div style={{}}>
+            <div className = "flex">
+                <div className="page-header">
+                    <div className="container">
+                        <nav className="navbar">
+                            <Link to ="/">
+                                <img src="../../assets/munchLogo.png" alt="logo" width={"200px"} ></img>
+                            </Link>
+                            <ul className="nav nav-pills">
+                                    <li>
+                                        <Link to="/"> Home </Link>
+                                    </li>
+                                    <li>
+                                        <Link to="/login"> Login </Link>
+                                    </li>
+                                    <li>
+                                        <Link to="/create"> Create Account </Link>
+                                    </li>
+                                    <li>
+                                        <Link to="/publish"> Publish Post </Link>
+                                    </li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+        </div>
